--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,10 +8,26 @@ services:
       - 'POSTGRES_DB=db'
       - 'POSTGRES_USER=user'
       - 'POSTGRES_PASSWORD=passwd'
+    deploy:
+      resources:
+        reservations:
+          memory: 256M
+          cpus: "0.025"
+        limits:
+          memory: 512M
+          cpus: "0.4"
   mongo:
     image: mongo
     ports:
       - '27017:27017'
+    deploy:
+      resources:
+        reservations:
+          memory: 256M
+          cpus: "0.025"
+        limits:
+          memory: 512M
+          cpus: "0.4"
   rabbit:
     image: 'rabbitmq:management'
     ports:
@@ -20,6 +36,14 @@ services:
     environment:
       - 'RABBITMQ_DEFAULT_USER=user'
       - 'RABBITMQ_DEFAULT_PASS=passwd'
+    deploy:
+      resources:
+        reservations:
+          memory: 256M
+          cpus: "0.025"
+        limits:
+          memory: 512M
+          cpus: "0.4"
   categorizer:
     build: '../categorizer'
     ports:
@@ -35,6 +59,14 @@ services:
       - 'SPRING_RABBITMQ_PORT=5672'
       - 'SPRING_RABBITMQ_USERNAME=user'
       - 'SPRING_RABBITMQ_PASSWORD=passwd'
+    deploy:
+      resources:
+        reservations:
+          memory: 256M
+          cpus: "0.1"
+        limits:
+          memory: 512M
+          cpus: "0.1"
   dispatcher:
     build: '../dispatcher'
     ports:
@@ -50,7 +82,20 @@ services:
       - 'SPRING_RABBITMQ_PORT=5672'
       - 'SPRING_RABBITMQ_USERNAME=user'
       - 'SPRING_RABBITMQ_PASSWORD=passwd'
+    deploy:
+      resources:
+        reservations:
+          memory: 256M
+          cpus: "0.1"
+        limits:
+          memory: 512M
+          cpus: "0.1"
   dashboard:
     build: '../dashboard'
     ports:
       - '4200:4200'
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+          cpus: "0.1"
