--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -59,6 +59,13 @@ services:
       - 'SPRING_RABBITMQ_PORT=5672'
       - 'SPRING_RABBITMQ_USERNAME=user'
       - 'SPRING_RABBITMQ_PASSWORD=passwd'
+      - 'RABBIT_EXCHANGE=respond-exchange'
+      - 'RABBIT_ROUTES_INCIDENTS=respond-incidents-route'
+      - 'RABBIT_QUEUES_INCIDENTS=respond-incidents-queue'
+      - 'RABBIT_BACKOFF_POLICY_MULTIPLIER=10'
+      - 'RABBIT_BACKOFF_POLICY_INIT_INTERVAL=500'
+      - 'RABBIT_BACKOFF_POLICY_MAX_INTERVAL=10000'
+      - 'RABBIT_RETRY_POLICY_MAX_ATTEMPTS=15'
     deploy:
       resources:
         reservations:
@@ -82,6 +89,14 @@ services:
       - 'SPRING_RABBITMQ_PORT=5672'
       - 'SPRING_RABBITMQ_USERNAME=user'
       - 'SPRING_RABBITMQ_PASSWORD=passwd'
+      - 'SPRING_RABBITMQ_LISTENER_SIMPLE_ACKNOWLEDGE_MODE=manual'
+      - 'RABBIT_EXCHANGE=respond-exchange'
+      - 'RABBIT_ROUTES_INCIDENTS=respond-incidents-route'
+      - 'RABBIT_QUEUES_INCIDENTS=respond-incidents-queue'
+      - 'RABBIT_BACKOFF_POLICY_MULTIPLIER=10'
+      - 'RABBIT_BACKOFF_POLICY_INIT_INTERVAL=500'
+      - 'RABBIT_BACKOFF_POLICY_MAX_INTERVAL=10000'
+      - 'RABBIT_RETRY_POLICY_MAX_ATTEMPTS=15'
     deploy:
       resources:
         reservations:
