--- a/kubernetes/dispatcher.yml
+++ b/kubernetes/dispatcher.yml
@@ -49,6 +49,13 @@ data:
   SPRING_RABBITMQ_HOST: 's-24ss-ase-pr-inso-02-rabbitmq-service'
   SPRING_RABBITMQ_PORT: '5672'
   SPRING_RABBITMQ_USERNAME: 'user'
+  RABBIT_EXCHANGE: 'respond-exchange'
+  RABBIT_ROUTES_INCIDENTS: 'respond-incidents-route'
+  RABBIT_QUEUES_INCIDENTS: 'respond-incidents-queue'
+  RABBIT_BACKOFF_POLICY_MULTIPLIER: '10'
+  RABBIT_BACKOFF_POLICY_INIT_INTERVAL: '500'
+  RABBIT_BACKOFF_POLICY_MAX_INTERVAL: '10000'
+  RABBIT_RETRY_POLICY_MAX_ATTEMPTS: '15'
 ---
 apiVersion: v1
 kind: Secret
