--- a/categorizer/src/main/resources/application.yml
+++ b/categorizer/src/main/resources/application.yml
@@ -1,12 +1,30 @@
 server:
   port: 8081
 
+logging:
+  level:
+    at.ase.respond.categorizer: 'debug'
+
+rabbit:
+  backoff-policy:
+    multiplier: 5
+    init-interval: 500
+    max-interval: 10000
+  retry-policy:
+    max-attempts: 15
+  exchange: 'respond-exchange'
+  routes:
+    incidents: 'respond-incidents-route'
+  queues:
+    incidents: 'respond-incidents-queue'
+
 spring:
   rabbitmq:
     host: 'localhost'
     port: 5672
     username: 'user'
     password: 'passwd'
+    publisher-confirm-type: 'correlated'
   datasource:
     url: 'jdbc:postgresql://localhost:5432/db'
     username: 'user'
