--- a/dashboard/angular.json
+++ b/dashboard/angular.json
@@ -22,12 +22,17 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*",
+                "input": "./node_modules/leaflet/dist/images",
+                "output": "leaflet/"
+              }
             ],
             "styles": [
               "src/custom-theme.scss",
               "src/styles.css",
-              "./node_modules/leaflet/dist/leaflet.css"
+              "node_modules/leaflet/dist/leaflet.css"
             ],
             "scripts": []
           },
