--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -44,8 +44,8 @@ services:
         limits:
           memory: 512M
           cpus: "0.4"
-  categorizer:
-    build: '../categorizer'
+  incident-service:
+    build: '../indicent'
     ports:
       - '8081:8081'
     depends_on:
@@ -74,7 +74,25 @@ services:
         limits:
           memory: 512M
           cpus: "0.1"
-  dispatcher:
+  categorization-service:
+    build: '../categorization'
+    ports:
+      - '8083:8083'
+    depends_on:
+      - mongo
+    environment:
+      - 'SPRING_DATA_MONGODB_DATABASE=db'
+      - 'SPRING_DATA_MONGODB_HOST=mongo'
+      - 'SPRING_DATA_MONGODB_PORT=27017'
+    deploy:
+      resources:
+        reservations:
+          memory: 256M
+          cpus: "0.1"
+        limits:
+          memory: 512M
+          cpus: "0.1"
+  dispatcher-service:
     build: '../dispatcher'
     ports:
       - '8082:8082'
