--- a/dashboard/angular.json
+++ b/dashboard/angular.json
@@ -32,7 +32,8 @@
             "styles": [
               "src/custom-theme.scss",
               "src/styles.css",
-              "node_modules/leaflet/dist/leaflet.css"
+              "node_modules/leaflet/dist/leaflet.css",
+              "node_modules/leaflet-control-geocoder/dist/Control.Geocoder.css"
             ],
             "scripts": []
           },
@@ -55,7 +56,21 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
+            },
+            "mock": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.mock.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -68,6 +83,9 @@
             },
             "development": {
               "buildTarget": "respond:build:development"
+            },
+            "mock": {
+              "buildTarget": "respond:build:mock"
             }
           },
           "defaultConfiguration": "development"
