--- a/dispatcher/src/test/resources/application.yml
+++ b/dispatcher/src/test/resources/application.yml
@@ -8,5 +8,7 @@ rabbit:
   exchange: 'respond-exchange'
   routes:
     incidents: 'respond-incidents-route'
+    resources: 'respond-resources-route'
   queues:
     incidents: 'respond-incidents-queue'
+    resources: 'respond-resources-queue'
