--- a/dashboard/angular.json
+++ b/dashboard/angular.json
@@ -88,7 +88,7 @@
               "buildTarget": "respond:build:mock"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "mock"
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
