--- a/datafeeder/src/main/resources/application.yml
+++ b/datafeeder/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: 8082
+  port: 8084
 
 logging:
   level:
-    at.ase.respond.dispatcher: 'debug'
+    at.ase.respond.datafeeder: 'debug'
 
 rabbit:
   backoff-policy:
@@ -14,15 +14,11 @@ rabbit:
     max-attempts: 15
   exchange: 'respond-exchange'
   routes:
-    incidents: 'respond-incidents-route'
     resources:
       status: 'respond-resources-status-route'
       location: 'respond-resources-location-route'
   queues:
-    incidents: 'respond-incidents-queue'
-    resources:
-      status: 'respond-resources-status-queue'
-      location: 'respond-resources-location-queue'
+    resources: 'respond-resources-datafeeder-queue'
 
 spring:
   rabbitmq:
@@ -33,8 +29,3 @@ spring:
     port: 5672
     username: 'user'
     password: 'passwd'
-  data:
-    mongodb:
-      host: 'localhost'
-      port: 27017
-      database: 'db'
