--- a/kubernetes/dispatcher.yml
+++ b/kubernetes/dispatcher.yml
@@ -52,8 +52,10 @@ data:
   RABBIT_EXCHANGE: 'respond-exchange'
   RABBIT_ROUTES_INCIDENTS: 'respond-incidents-route'
   RABBIT_QUEUES_INCIDENTS: 'respond-incidents-queue'
-  RABBIT_ROUTES_RESOURCES: 'respond-resources-route'
-  RABBIT_QUEUES_RESOURCES: 'respond-resources-queue'
+  RABBIT_ROUTES_RESOURCES_STATUS: 'respond-resources-status-route'
+  RABBIT_QUEUES_RESOURCES_STATUS: 'respond-resources-status-queue'
+  RABBIT_ROUTES_RESOURCES_LOCATION: 'respond-resources-location-route'
+  RABBIT_QUEUES_RESOURCES_LOCATION: 'respond-resources-location-queue'
   RABBIT_BACKOFF_POLICY_MULTIPLIER: '10'
   RABBIT_BACKOFF_POLICY_INIT_INTERVAL: '500'
   RABBIT_BACKOFF_POLICY_MAX_INTERVAL: '10000'
