--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -45,7 +45,11 @@ services:
           memory: 512M
           cpus: "0.4"
   incident-service:
-    build: '../incident'
+    build:
+      context: '../incident'
+      args:
+        - CI_JOB_TOKEN=$CI_JOB_TOKEN
+        - CI_PROJECT_ID=$CI_PROJECT_ID
     ports:
       - '8081:8081'
     depends_on:
@@ -75,7 +79,11 @@ services:
           memory: 512M
           cpus: "0.1"
   categorization-service:
-    build: '../categorization'
+    build:
+      context: '../categorization'
+      args:
+        - CI_JOB_TOKEN=$CI_JOB_TOKEN
+        - CI_PROJECT_ID=$CI_PROJECT_ID
     ports:
       - '8083:8083'
     depends_on:
@@ -93,7 +101,11 @@ services:
           memory: 512M
           cpus: "0.1"
   dispatcher-service:
-    build: '../dispatcher'
+    build:
+      context: '../dispatcher'
+      args:
+        - CI_JOB_TOKEN=$CI_JOB_TOKEN
+        - CI_PROJECT_ID=$CI_PROJECT_ID
     ports:
       - '8082:8082'
     depends_on:
@@ -126,7 +138,11 @@ services:
           memory: 512M
           cpus: "0.1"
   datafeeder:
-    build: '../datafeeder'
+    build:
+      context: '../datafeeder'
+      args:
+        - CI_JOB_TOKEN=$CI_JOB_TOKEN
+        - CI_PROJECT_ID=$CI_PROJECT_ID
     ports:
       - '8084:8084'
     depends_on:
