--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -83,6 +83,8 @@ test-dashboard:
     - echo "{\"auths\":{\"$CI_REGISTRY\":{\"auth\":\"$(printf "%s:%s" "${CI_REGISTRY_USER}" "${CI_REGISTRY_PASSWORD}" | base64 | tr -d '\n')\"},\"$CI_DEPENDENCY_PROXY_SERVER\":{\"auth\":\"$(printf "%s:%s" ${CI_DEPENDENCY_PROXY_USER} "${CI_DEPENDENCY_PROXY_PASSWORD}" | base64 | tr -d '\n')\"}}}" > /kaniko/.docker/config.json
     - /kaniko/executor 
       --context "${CI_PROJECT_DIR}/${SUBPROJECT}" 
+      --build-arg CI_JOB_TOKEN="${CI_JOB_TOKEN}"
+      --build-arg CI_PROJECT_ID="${CI_PROJECT_ID}"
       --dockerfile "${CI_PROJECT_DIR}/${SUBPROJECT}/Dockerfile" 
       --label "org.opencontainers.image.source=${CI_PROJECT_URL}"
       --label "org.opencontainers.image.revision=${CI_COMMIT_SHA}"
