Add Kubernetes CPU limits/requests to CI/CD pipeline build server containers

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,8 @@ variables:
   KUBERNETES_CPU_REQUEST: "100m"
   KUBERNETES_HELPER_CPU_LIMIT: "200m"
   KUBERNETES_HELPER_CPU_REQUEST: "100m"
+  KUBERNETES_SERVICE_CPU_LIMIT: "200m"
+  KUBERNETES_SERVICE_CPU_REQUEST: "100m"
 
 stages:
   - publish
