Try FF_USE_LEGACY_KUBERNETES_EXECUTION_STRATEGY to fix Gitlab runner errors

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 variables:
   FF_PRINT_POD_EVENTS: "true"
+  FF_USE_LEGACY_KUBERNETES_EXECUTION_STRATEGY: "true"
   KUBERNETES_CPU_LIMIT: "200m"
   KUBERNETES_CPU_REQUEST: "100m"
   KUBERNETES_HELPER_CPU_LIMIT: "200m"
