Try different CPU Request/limit values

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,11 @@
 variables:
   FF_PRINT_POD_EVENTS: "true"
-  KUBERNETES_CPU_LIMIT: "200m"
-  KUBERNETES_CPU_REQUEST: "100m"
-  KUBERNETES_HELPER_CPU_LIMIT: "200m"
-  KUBERNETES_HELPER_CPU_REQUEST: "100m"
-  KUBERNETES_SERVICE_CPU_LIMIT: "200m"
-  KUBERNETES_SERVICE_CPU_REQUEST: "100m"
+  KUBERNETES_CPU_LIMIT: .2
+  KUBERNETES_CPU_REQUEST: .1
+  KUBERNETES_HELPER_CPU_LIMIT: .2
+  KUBERNETES_HELPER_CPU_REQUEST: .1
+  KUBERNETES_SERVICE_CPU_LIMIT: .2
+  KUBERNETES_SERVICE_CPU_REQUEST: .1
 
 stages:
   - publish
