--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,5 @@
 variables:
   FF_PRINT_POD_EVENTS: "true"
-  KUBERNETES_CPU_LIMIT: .2
-  KUBERNETES_CPU_REQUEST: .1
-  KUBERNETES_HELPER_CPU_LIMIT: .2
-  KUBERNETES_HELPER_CPU_REQUEST: .1
-  KUBERNETES_SERVICE_CPU_LIMIT: .2
-  KUBERNETES_SERVICE_CPU_REQUEST: .1
 
 stages:
   - publish
@@ -37,8 +31,8 @@ publish-common-lib:
     - cd common
     - ./gradlew publish
   variables:
-    KUBERNETES_CPU_REQUEST: "500m"
-    KUBERNETES_CPU_LIMIT: "1000m"
+    KUBERNETES_CPU_REQUEST: "0.1"
+    KUBERNETES_CPU_LIMIT: "0.1"
     KUBERNETES_MEMORY_REQUEST: "512Mi"
     KUBERNETES_MEMORY_LIMIT: "1024Mi"
 
