Resolve "Feature 3 Access Management"

--- a/categorization/src/main/resources/application.yml
+++ b/categorization/src/main/resources/application.yml
@@ -16,6 +16,15 @@ spring:
       host: 'localhost'
       port: 27017
       database: 'db'
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          public-key-location: classpath:oauth2.pub
+          jws-algorithms:
+            - RS256
+          audiences:
+            - 'at.ase.respond'
 
 custom:
   questionschema:
