--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -63,6 +63,7 @@ services:
       - 'SPRING_RABBITMQ_PORT=5672'
       - 'SPRING_RABBITMQ_USERNAME=user'
       - 'SPRING_RABBITMQ_PASSWORD=passwd'
+      - 'SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI=http://dashboard/assets/jwks.json'
       - 'RABBIT_EXCHANGE=respond-exchange'
       - 'RABBIT_ROUTES_INCIDENTS=respond-incidents-route'
       - 'RABBIT_QUEUES_INCIDENTS=respond-incidents-queue'
@@ -120,6 +121,7 @@ services:
       - 'SPRING_RABBITMQ_USERNAME=user'
       - 'SPRING_RABBITMQ_PASSWORD=passwd'
       - 'SPRING_RABBITMQ_LISTENER_SIMPLE_ACKNOWLEDGE_MODE=manual'
+      - 'SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI=http://dashboard/assets/jwks.json'
       - 'RABBIT_EXCHANGE=respond-exchange'
       - 'RABBIT_ROUTES_INCIDENTS=respond-incidents-route'
       - 'RABBIT_QUEUES_INCIDENTS=respond-incidents-queue'
