--- a/categorization/src/test/resources/application.yml
+++ b/categorization/src/test/resources/application.yml
@@ -2,3 +2,14 @@ custom:
   questionschema:
     path: "/data/question_schema.json"
     protocolSelectorQuestionId: 6
+
+spring:
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          public-key-location: classpath:oauth2.pub
+          jws-algorithms:
+            - RS256
+          audiences:
+            - 'at.ase.respond'
