--- a/dispatcher/src/test/resources/application.yml
+++ b/dispatcher/src/test/resources/application.yml
@@ -18,3 +18,14 @@ rabbit:
     resources:
       status: 'respond-resources-status-queue'
       location: 'respond-resources-location-queue'
+
+spring:
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          public-key-location: classpath:oauth2.pub
+          jws-algorithms:
+            - RS256
+          audiences:
+            - 'at.ase.respond'
