--- a/incident/src/test/resources/application.yml
+++ b/incident/src/test/resources/application.yml
@@ -8,6 +8,15 @@ spring:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: create
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          public-key-location: classpath:oauth2.pub
+          jws-algorithms:
+            - RS256
+          audiences:
+            - 'at.ase.respond'
 
 rabbit:
   backoff-policy:
