--- a/kubernetes/dispatcher-service.yml
+++ b/kubernetes/dispatcher-service.yml
@@ -49,6 +49,7 @@ data:
   SPRING_RABBITMQ_HOST: 's-24ss-ase-pr-inso-02-rabbitmq-service'
   SPRING_RABBITMQ_PORT: '5672'
   SPRING_RABBITMQ_USERNAME: 'user'
+  SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI: 'https://24ss-ase-pr-inso-02.apps.student.inso-w.at/dispatcher/assets/jwks.json'
   RABBIT_EXCHANGE: 'respond-exchange'
   RABBIT_ROUTES_INCIDENTS: 'respond-incidents-route'
   RABBIT_QUEUES_INCIDENTS: 'respond-incidents-queue'
