changed gradle user home

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,12 +28,12 @@ publish-common-lib:
     - env
   image: gradle:8.7-jdk21
   script:
-    - namei -l ~/.gradle
-    - cd common
+    - namei -l $GRADLE_USER_HOME
     - echo $GRADLE_USER_HOME
-    - ./gradlew publish -g gradle-user-home ~/.gradle
-#  variables:
-#    GRADLE_USER_HOME: "/home/www-data/.gradle"
+    - cd common
+    - ./gradlew publish
+  variables:
+    GRADLE_USER_HOME: "$CI_PROJECT_DIR/.gradle"
 
 test-data-feeder:
   stage: test
