--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,6 @@ publish-common-lib:
     - mkdir -p $GRADLE_USER_HOME
   image: gradle:8.7-jdk21
   script:
-    - namei -l $GRADLE_USER_HOME
     - cd common
     - ./gradlew publish
   variables:
@@ -41,9 +40,13 @@ test-data-feeder:
     when: always
     reports:
       junit: datafeeder/build/test-results/test/**/TEST-*.xml
+  before_script:
+    - mkdir -p $GRADLE_USER_HOME
   script:
     - cd datafeeder
     - ./gradlew check
+  variables:
+    GRADLE_USER_HOME: "$CI_PROJECT_DIR/.gradle"
 
 test-incident-service:
   stage: test
@@ -52,9 +55,13 @@ test-incident-service:
     when: always
     reports:
       junit: incident/build/test-results/test/**/TEST-*.xml
+  before_script:
+    - mkdir -p $GRADLE_USER_HOME
   script:
     - cd incident
     - ./gradlew check
+  variables:
+    GRADLE_USER_HOME: "$CI_PROJECT_DIR/.gradle"
 
 test-categorization-service:
   stage: test
@@ -63,9 +70,13 @@ test-categorization-service:
     when: always
     reports:
       junit: categorization/build/test-results/test/**/TEST-*.xml
+  before_script:
+    - mkdir -p $GRADLE_USER_HOME
   script:
     - cd categorization
     - ./gradlew check
+  variables:
+    GRADLE_USER_HOME: "$CI_PROJECT_DIR/.gradle"
 
 test-dispatcher-service:
   stage: test
@@ -74,9 +85,13 @@ test-dispatcher-service:
     when: always
     reports:
       junit: dispatcher/build/test-results/test/**/TEST-*.xml
+  before_script:
+    - mkdir -p $GRADLE_USER_HOME
   script:
     - cd dispatcher
     - ./gradlew check
+  variables:
+    GRADLE_USER_HOME: "$CI_PROJECT_DIR/.gradle"
 
 test-dashboard:
   stage: test
