[72] Use nginx-unprivileged Docker image

--- a/dashboard/Dockerfile
+++ b/dashboard/Dockerfile
@@ -21,7 +21,7 @@ RUN npm run build:${BUILD_ENV}
 # Stage 2: Serve app with nginx server
 
 # Use official nginx image as the base image
-FROM nginx:latest
+FROM nginxinc/nginx-unprivileged:latest
 
 # Copy the build output to replace the default nginx contents.
 COPY --from=build /usr/local/app/dist/respond/browser /usr/share/nginx/html
