Add dispatching recommendations

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -76,6 +76,7 @@ services:
       - 'SPRING_DATA_MONGODB_DATABASE=db'
       - 'SPRING_DATA_MONGODB_HOST=mongo'
       - 'SPRING_DATA_MONGODB_PORT=27017'
+      - 'SPRING_DATA_MONGODB_AUTO_INDEX_CREATION=true'
       - 'SPRING_RABBITMQ_HOST=rabbit'
       - 'SPRING_RABBITMQ_PORT=5672'
       - 'SPRING_RABBITMQ_USERNAME=user'
