--- a/kubernetes/dispatcher-service.yml
+++ b/kubernetes/dispatcher-service.yml
@@ -44,6 +44,7 @@ data:
   SPRING_DATA_MONGODB_DATABASE: 'db'
   SPRING_DATA_MONGODB_HOST: 's-24ss-ase-pr-inso-02-mongodb-service'
   SPRING_DATA_MONGODB_PORT: '27017'
+  SPRING_DATA_MONGODB_AUTO_INDEX_CREATION: 'true'
   SPRING_DATASOURCE_USERNAME: 'user'
   SPRING_DATASOURCE_PASSWORD: 'passwd'
   SPRING_RABBITMQ_HOST: 's-24ss-ase-pr-inso-02-rabbitmq-service'
