--- a/dispatcher/src/main/resources/application.yml
+++ b/dispatcher/src/main/resources/application.yml
@@ -40,6 +40,7 @@ spring:
       host: 'localhost'
       port: 27017
       database: 'db'
+      auto-index-creation: true
   security:
     oauth2:
       resourceserver:
