Resolve "Feature 10 UI Localization"

--- a/dispatcher/src/main/resources/application.yml
+++ b/dispatcher/src/main/resources/application.yml
@@ -27,6 +27,8 @@ rabbit:
       location: 'respond-resources-location-queue'
 
 spring:
+  main:
+    allow-circular-references: true
   rabbitmq:
     listener:
       simple:
