--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -111,6 +111,9 @@ test-dashboard:
     when: always
     reports:
       junit: dashboard/tmp/test/TESTS-*.xml
+    paths:
+      - dashboard/coverage/
+  coverage: '/Lines \W+: (\d+\.\d+)%.*/'
   script:
     - cd dashboard
     - npm install
