--- a/dashboard/angular.json
+++ b/dashboard/angular.json
@@ -112,7 +112,8 @@
               "src/styles.css"
             ],
             "scripts": [],
-            "karmaConfig": "karma.conf.js"
+            "karmaConfig": "karma.conf.js",
+            "codeCoverageExclude": ["src/app/mocks/*"]
           }
         }
       }
