--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -11,7 +11,7 @@
     "test": "ng test",
     "build:prod": "ng build --configuration=production",
     "build:dev": "ng build --configuration=development",
-    "test:ci": "ng test --watch=false --browsers=ChromeHeadlessCI"
+    "test:ci": "ng test --watch=false --browsers=ChromeHeadlessCI --code-coverage"
   },
   "private": true,
   "dependencies": {
@@ -33,6 +33,7 @@
     "css-loader": "^7.1.1",
     "leaflet": "^1.9.4",
     "leaflet-control-geocoder": "^2.4.0",
+    "ngentest": "^2.2.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "uuid": "^9.0.1",
