Add resource presentation data and add caller information

--- a/categorization/src/main/resources/application.yml
+++ b/categorization/src/main/resources/application.yml
@@ -25,6 +25,7 @@ spring:
             - RS256
           audiences:
             - 'at.ase.respond'
+          jwk-set-uri: 'http://localhost/assets/jwks.json'
 
 custom:
   questionschema:
