--- a/incident/src/main/resources/application.yml
+++ b/incident/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 logging:
   level:
-    at.ase.respond.incident: 'debug'
+    at.ase.respond.incident: 'trace'
 
 rabbit:
   backoff-policy:
@@ -42,4 +42,5 @@ spring:
             - RS256
           audiences:
             - 'at.ase.respond'
+          jwk-set-uri: 'http://localhost/assets/jwks.json'
 
