--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -47,6 +47,13 @@ services:
       - 'RABBIT_BACKOFF_POLICY_INIT_INTERVAL=500'
       - 'RABBIT_BACKOFF_POLICY_MAX_INTERVAL=10000'
       - 'RABBIT_RETRY_POLICY_MAX_ATTEMPTS=15'
+      - 'LOG_KEY_PATH=/run/secrets/private-key.pem'
+      - 'PUBLIC_KEY_PATH=/run/secrets/public-key.pem'
+      - 'SERVICE_NAME=Incident'
+    volumes:
+      - incident_logs:/var/log/
+      - ./../resources/keys/incident/log-private.pem:/run/secrets/private-key.pem
+      - ./../resources/keys/incident/log-public.pem:/run/secrets/public-key.pem
   categorization-service:
     build:
       context: '../categorization'
@@ -61,6 +68,13 @@ services:
       - 'SPRING_DATA_MONGODB_DATABASE=db'
       - 'SPRING_DATA_MONGODB_HOST=mongo'
       - 'SPRING_DATA_MONGODB_PORT=27017'
+      - 'LOG_KEY_PATH=/run/secrets/private-key.pem'
+      - 'PUBLIC_KEY_PATH=/run/secrets/public-key.pem'
+      - 'SERVICE_NAME=Categorization'
+    volumes:
+      - categorization_logs:/var/log/
+      - ./../resources/keys/categorization/log-private.pem:/run/secrets/private-key.pem
+      - ./../resources/keys/categorization/log-public.pem:/run/secrets/public-key.pem
   dispatcher-service:
     build:
       context: '../dispatcher'
@@ -93,6 +107,13 @@ services:
       - 'RABBIT_BACKOFF_POLICY_MAX_INTERVAL=10000'
       - 'RABBIT_RETRY_POLICY_MAX_ATTEMPTS=15'
       - 'SPRING_PROFILES_ACTIVE=presentation'
+      - 'LOG_KEY_PATH=/run/secrets/private-key.pem'
+      - 'PUBLIC_KEY_PATH=/run/secrets/public-key.pem'
+      - 'SERVICE_NAME=Dispatcher'
+    volumes:
+      - dispatcher_logs:/var/log/
+      - ./../resources/keys/dispatcher/log-private.pem:/run/secrets/private-key.pem
+      - ./../resources/keys/dispatcher/log-public.pem:/run/secrets/public-key.pem
   datafeeder:
     build:
       context: '../datafeeder'
@@ -126,3 +147,54 @@ services:
         - BUILD_ENV=dev
     ports:
       - '80:80'
+  grafana:
+    image: grafana/grafana:10.4.1
+    ports:
+      - "3000:3000"
+    environment:
+      GF_SECURITY_ADMIN_USER: admin
+      GF_SECURITY_ADMIN_PASSWORD: password
+      GF_PATHS_DATA: "/var/lib/grafana/data"
+      GF_PATHS_LOGS: "/var/log/grafana"
+      GF_PATHS_PLUGINS: "/var/lib/grafana/plugins"
+      GF_PATHS_PROVISIONING: "/etc/grafana/provisioning"
+    volumes:
+      - grafana_data:/var/lib/grafana
+      - ./grafana/grafana.ini:/etc/grafana/grafana.ini
+      - ./grafana/datasources.yaml:/etc/grafana/provisioning/datasources/datasources.yaml
+      - ./grafana/dashboardproviders.yaml:/etc/grafana/provisioning/dashboards/dashboardproviders.yaml
+      - ./grafana/dashboards:/var/lib/grafana/dashboards/log-dashboard
+
+    restart: unless-stopped
+  loki:
+    image: grafana/loki:latest
+    ports:
+      - "3100:3100"
+    volumes:
+      - loki_data:/loki
+      - ./loki/loki-config.yaml:/etc/loki/loki-config.yaml
+    command: -config.file=/etc/loki/loki-config.ya  ml
+  promtail-dispatcher:
+    image: grafana/promtail:latest
+    volumes:
+      - ./promtail/promtail-config.yaml:/etc/promtail/config.yml
+      - dispatcher_logs:/var/log/  # Ensure this is the same path as your application logs to
+    command: -config.file=/etc/promtail/config.yml
+  promtail-incident:
+    image: grafana/promtail:latest
+    volumes:
+      - ./promtail/promtail-config.yaml:/etc/promtail/config.yml
+      - incident_logs:/var/log/  # Ensure this is the same path as your application logs to
+    command: -config.file=/etc/promtail/config.yml
+  promtail-categorization:
+    image: grafana/promtail:latest
+    volumes:
+      - ./promtail/promtail-config.yaml:/etc/promtail/config.yml
+      - categorization_logs:/var/log/  # Ensure this is the same path as your application logs to
+    command: -config.file=/etc/promtail/config.yml
+volumes:
+  grafana_data:
+  dispatcher_logs:
+  incident_logs:
+  categorization_logs:
+  loki_data:
