--- a/kubernetes/dashboard.yml
+++ b/kubernetes/dashboard.yml
@@ -19,9 +19,12 @@ spec:
           ports:
             - containerPort: 80
           resources:
+            requests:
+              memory: "256Mi"
+              cpu: "100m"
             limits:
               memory: "512Mi"
-              cpu: "100m"
+              cpu: "300m"
       imagePullSecrets:
         - name: secret-dockercfg
   strategy:
