--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -9,7 +9,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "build:prod": "ng build --configuration=production",
+    "build:prod": "ng build --configuration=production --base-href /dashboard/",
     "build:dev": "ng build --configuration=development",
     "test:ci": "ng test --watch=false --browsers=ChromeHeadlessCI --code-coverage"
   },
