--- a/kubernetes/categorization-service.yml
+++ b/kubernetes/categorization-service.yml
@@ -17,7 +17,7 @@ spec:
         - name: 24ss-ase-pr-inso-02-categorization-container
           image: registry.reset.inso-w.at/2024ss-ase-pr-group/24ss-ase-pr-inso-02/categorization:latest
           ports:
-            - containerPort: 8081
+            - containerPort: 8083
           resources:
             requests:
               memory: "256Mi"
@@ -50,7 +50,7 @@ spec:
             - containerPort: 9080
           resources:
             requests:
-              cpu: "50"
+              cpu: "50m"
               memory: "128Mi"
             limits:
               cpu: "50m"
@@ -84,6 +84,7 @@ data:
   SPRING_DATA_MONGODB_DATABASE: 'db'
   SPRING_DATA_MONGODB_HOST: 's-24ss-ase-pr-inso-02-mongodb-service'
   SPRING_DATA_MONGODB_PORT: '27017'
+  SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI: 'http://s-24ss-ase-pr-inso-02-dashboard-service/assets/jwks.json'
 ---
 apiVersion: v1
 kind: Secret
@@ -105,8 +106,8 @@ spec:
     app: 24ss-ase-pr-inso-02-categorization
   ports:
     - protocol: TCP
-      port: 8081
-      targetPort: 8081
+      port: 8083
+      targetPort: 8083
   type: ClusterIP
   clusterIP: None
 ---
@@ -128,7 +129,7 @@ spec:
               service:
                 name: s-24ss-ase-pr-inso-02-categorization-service
                 port:
-                  number: 8081
+                  number: 8083
 ---
 apiVersion: v1
 kind: Secret
