--- a/kubernetes/dispatcher-service.yml
+++ b/kubernetes/dispatcher-service.yml
@@ -17,7 +17,7 @@ spec:
         - name: 24ss-ase-pr-inso-02-dispatcher-container
           image: registry.reset.inso-w.at/2024ss-ase-pr-group/24ss-ase-pr-inso-02/dispatcher:latest
           ports:
-            - containerPort: 8081
+            - containerPort: 8082
           resources:
             requests:
               memory: "256Mi"
@@ -81,6 +81,7 @@ metadata:
   name: 24ss-ase-pr-inso-02-dispatcher-config
   namespace: 24ss-ase-pr-inso-02
 data:
+  SPRING_PROFILES_ACTIVE: 'presentation'
   SPRING_DATA_MONGODB_DATABASE: 'db'
   SPRING_DATA_MONGODB_HOST: 's-24ss-ase-pr-inso-02-mongodb-service'
   SPRING_DATA_MONGODB_PORT: '27017'
@@ -90,7 +91,7 @@ data:
   SPRING_RABBITMQ_HOST: 's-24ss-ase-pr-inso-02-rabbitmq-service'
   SPRING_RABBITMQ_PORT: '5672'
   SPRING_RABBITMQ_USERNAME: 'user'
-  SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI: 'https://24ss-ase-pr-inso-02.apps.student.inso-w.at/dispatcher/assets/jwks.json'
+  SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI: 'http://s-24ss-ase-pr-inso-02-dashboard-service/assets/jwks.json'
   RABBIT_EXCHANGE: 'respond-exchange'
   RABBIT_ROUTES_INCIDENTS: 'respond-incidents-route'
   RABBIT_QUEUES_INCIDENTS: 'respond-incidents-queue'
